# bigyo

./: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
app/: db.sqlite3  manage.py
app/crawler/: apps.py  urls.py  views.py
app/datacore/: apps.py  urls.py
app/datacore/migrations/: 0001_initial.py
app/datacore/views/: __init__.py  product_comparison.py
app/polls/: models.py
app/polls/management/commands/: damhyeok.py
app/polls/migrations/: 0001_initial.py
app/polls/mysite/mysite/: settings.py
app/users/: admin.py  apps.py  models.py
app/users/migrations/: 0001_initial.py
app/versus/: asgi.py  log_handler.py  settings.py  urls.py  wsgi.py
example/: Django_example.py
